--- a/products.html
+++ b/products.html
@@ -13,10 +13,10 @@
              <nav>
                 <li><a href="plush.html">Plush Toys</a></li>
                 <li><a href="chew.html">Chew Toys</a></li>
-                <li><a href="interactive.html">Interactive Toys</a></li>
-                <li><a href="catnip.html">Catnip Toys</a></li>
-                <li><a href="squeaky.html">Squeaky Toys</a></li>
-                <li><a href="feather.html">Feather Toys</a></li>
+                <li><a href="">Interactive Toys</a></li>
+                <li><a href="">Catnip Toys</a></li>
+                <li><a href="">Squeaky Toys</a></li>
+                <li><a href="">Feather Toys</a></li>
             </nav>
         </header>
         <footer>
